--- a/.gitignore
+++ b/.gitignore
@@ -90,11 +90,12 @@ celerybeat-schedule
 .env
 .venv
 env/
+
 venv/
 ENV/
 env.bak/
 venv.bak/
-
+.vscode/
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -113,3 +114,4 @@ dmypy.json
 # Pyre type checker
 .pyre/
 .idea/vcs.xml
+.vscode/launch.json
